2019-12-11         Arnold D. Robbins     <arnold@skeeve.com>

	* README: Renamed to ...
	* README.md: ... this. Cleaned up some as well,
	including moving to Markdown.

2019-11-08         Arnold D. Robbins     <arnold@skeeve.com>

	* test/T.chem: Use $oldawk instead of hardwiring 'awk'.
	* test/T.lilly: Remove gawk warnings from output, improves
	portability.

2019-10-17         Arnold D. Robbins     <arnold@skeeve.com>

	Pull in systime() and strftime() from the NetBSD awk.

	* awk.1: Document the functions.
	* run.c (bltin): Implement the functions.
	* awk.h: Add defines for systime and strftime.
	* lex.c: Add support for systime and strftime.

2019-10-07         Arnold D. Robbins     <arnold@skeeve.com>

	Integrate features from different *BSD versions of awk.
	Gensub support from NetBSD. Bitwise functions from OpenBSD.

	* awk.h: Add defines for and, or, xor, compl, lshift and rshift.
	* awkgram.y: Add support for gensub.
	* maketab.c: Ditto.
	* lex.c: Add support for gensub and bitwise functions.
	* parse.c (node5, op5): New functions.
	* proto.h (node5, op5): New declarations.
	* run.c (bltin): Implement the bitwise functions.
	(gensub): New function.
	* awk.1: Document additional functions.

2019-10-07         Arnold D. Robbins     <arnold@skeeve.com>

	* b.c (fnematch): Change type of pbuf from unsigned char to char.
	* proto.h (fnematch): Ditto.

2019-10-06         Arnold D. Robbins     <arnold@skeeve.com>

	* lib.c (readrec): Allow RS a regular expression. Imported
	the code from the NetBSD awk.
	* b.c (fnematch): New function for implementing the feature.
	* awk.1: Updated.
	* main.c (version): Updated.

2019-06-24         Arnold D. Robbins     <arnold@skeeve.com>

	* makefile: Revise to take into account there is no more awktest.tar,
	add targets 'check' and 'test', and also 'testclean' to clean up
	after test run.  Have 'clean' and 'cleaner' depend upon 'testclean'.

2019-06-23         Arnold D. Robbins     <arnold@skeeve.com>
